Thu Aug 12 22:10:02 UTC 2010  Sumant Tambe  <sutambe@nospam>

        * DAnCE/FaultCorrelationManager/FaultCorrelationManager_Impl.h:
        * DAnCE/FaultCorrelationManager/FaultCorrelationManager_Impl.cpp:

        * DAnCE/Interfaces/FaultCorrelationManager.idl:

        * DAnCE/tests/CIAO/FTComponents/FTClient_Timer_Handler.h:
        * DAnCE/tests/CIAO/FTComponents/FTClient_Timer_Handler.cpp:
        * DAnCE/tests/CIAO/FTComponents/FTClient_exec.cpp:
        * DAnCE/tests/CIAO/FTComponents/FTTask.idl:
        * DAnCE/tests/CIAO/FTComponents/FTTask_exec.h:
        * DAnCE/tests/CIAO/FTComponents/FTTask_exec.cpp:
        * DAnCE/tests/CIAO/FTComponents/client_trigger.cpp:

        The changes above are related to CORFU experiments and
        GroupFailover two phase commit implementation. 
        The changes below are not related to it.

        * ciao/ComponentServer/Configurators/Configurators.mpc:
        * ciao/ComponentServer/Configurators/Server_Configurator.cpp:

        * tools/Config_Handlers/DP_Handler.cpp:

        * tools/Config_Handlers/RT-CCM/CB_Handler.h:
        * tools/Config_Handlers/RT-CCM/CB_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/CLA_Handler.h:
        * tools/Config_Handlers/RT-CCM/CLA_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/CNPM_Handler.h:
        * tools/Config_Handlers/RT-CCM/CNPM_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/NPM_Handler.h:
        * tools/Config_Handlers/RT-CCM/NPM_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/OC_Handler.h:
        * tools/Config_Handlers/RT-CCM/OC_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/OR_Handler.h:
        * tools/Config_Handlers/RT-CCM/OR_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/PM_Handler.h:
        * tools/Config_Handlers/RT-CCM/PM_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/PS_Handler.h:
        * tools/Config_Handlers/RT-CCM/PS_Handler.cpp:
        * tools/Config_Handlers/RT-CCM/RT-CCM-Handlers.mpc: